# stock-analysis-tool

./: README.md  app.py  nasdaq_tickers.csv  pyproject.toml  requirements.txt
.steamlit/: pyproject.toml
